remove s on button

--- a/_includes/index.html
+++ b/_includes/index.html
@@ -9,7 +9,7 @@
 </div>
 <div class="row">
   <div class="col-8 offset-md-2 text-right">
-    <p><a class="btn btn-lg btn-info" href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank" role="button">Book a Free Consultations</a></p>
+    <p><a class="btn btn-lg btn-info" href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank" role="button">Book a Free Consultation</a></p>
   </div>
 </div>
 
