--- a/_includes/index.html
+++ b/_includes/index.html
@@ -19,8 +19,8 @@
 ================================================== -->
 <!-- Wrap the rest of the page in another container to center all the content. -->
 <div class="row mb-3 ml-2">
-  <div class="col-md-8 offset-md-2">
-    <h2>VPAT Evaluation and Certification</h2>
+  <div class="col-md-8 offset-md-2" id="content">
+    <h1>VPAT Evaluation and Certification</h1>
 
     <p class="lead">Our Web Accessibilitiy expert has been through the <a href="https://webaim.org/services/training/" target="_blank">WebAIM</a> course
     and understands the <a href="https://www.itic.org/policy/accessibility/vpat" target="_blank">VPAT</a> documentation process.</p>
@@ -34,10 +34,10 @@
   <div class="row">
     <div class="col-lg-4">
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="Card image cap">
+        <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="VPAT Monitoring">
         <div class="card-body">
-          <h5 class="card-title">VPAT Monitoring</h5>
-          <h6 class="card-title"><span class="small text-danger">*</span> $1495/$165 mo</h6>
+          <h2 class="card-title">VPAT Monitoring</h2>
+          <h3 class="card-title"><span class="small text-danger">*</span> $1495/$165 mo</h3>
           <ul>
             <li class="text-left">Evaluation Audit</li>
             <li class="text-left">Compliance Report</li>
@@ -49,7 +49,7 @@
             </div>
           </ul>
 
-          <h6 class="small text-left text-danger">* Request Quote for Enterprise Monitoring</h6>
+          <h4 class="small text-left text-danger">* Request Quote for Enterprise Monitoring</h4>
 
           <a href="https://kaffeinatedkodemonkey.youcanbook.me/" data-ycbm-modal="true" class="btn btn-danger mt-3">Start Monitoring</a>
         </div>
@@ -57,10 +57,10 @@
     </div><!-- /.col-lg-4 -->
     <div class="col-lg-4">
       <div class="card shadow-lg p-3 mb-5 bg-light rounded" style="width: 20rem;">
-        <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="Card image cap">
+        <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="VPAT Evaluation & Certification">
         <div class="card-body">
-          <h5 class="card-title">VPAT Evaluation & Certification</h5>
-          <h6 class="card-title">$1495 one-time</h6>
+          <h2 class="card-title">VPAT Evaluation & Certification</h2>
+          <h3 class="card-title">$1495 one-time</h3>
           <ul>
             <li class="text-left">Evaluation Audit</li>
             <li class="text-left">Compliance Report</li>
@@ -77,10 +77,10 @@
     </div><!-- /.col-lg-4 -->
     <div class="col-lg-4">
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="Card image cap">
+        <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="VPAT Evaluation">
         <div class="card-body">
-          <h5 class="card-title">VPAT Evaluation</h5>
-          <h6 class="card-title">$495 one-time</h6>
+          <h2 class="card-title">VPAT Evaluation</h2>
+          <h3 class="card-title">$495 one-time</h3>
           <ul>
             <li class="text-left">Evaluation Audit</li>
             <li class="text-left">Compliance Report</li>
@@ -135,7 +135,7 @@
 
     </div>
     <div class="col-md-5">
-      <img class="featurette-image img-fluid mx-auto" src="{{ site.url }}/assets/images/VPATSummary.jpg" alt="Generic placeholder image">
+      <img class="featurette-image img-fluid mx-auto" src="{{ site.url }}/assets/images/VPATSummary.jpg" alt="VPAT Documentation">
     </div>
   </div>
 
@@ -157,7 +157,7 @@
 
     </div>
     <div class="col-md-5 order-md-1 mt-5 pt-5">
-      <img class="featurette-image img-fluid mx-auto" src="{{ site.url }}/assets/images/SECTION508-705x382.png" alt="Generic placeholder image">
+      <img class="featurette-image img-fluid mx-auto" src="{{ site.url }}/assets/images/SECTION508-705x382.png" alt="Understading 508 & WCAG">
     </div>
   </div>
 
