--- a/_layouts/page-template.html
+++ b/_layouts/page-template.html
@@ -7,13 +7,13 @@
         <div class="col-10 offset-md-2">
           <h2 class="sr-only">{{ page.caption }}<h2>
           <figure>
-            <img class="img-fluid" src="{{ site.url }}/assets/images/{{ page.image }}" style="width: 80%;" alt="{{ page.title }} banner image">
+            <img class="img-fluid" src="{{ site.url }}/assets/images/{{ page.image }}" style="width: 80%;" alt="{{ page.title }}">
           </figure>
         </div>
       </div>
       <div class="row">
         <div class="col-8 offset-md-2 text-right">
-          <p><a class="btn btn-lg btn-info" href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank" role="button">Book a Free Consultations</a></p>
+          <p><a class="btn btn-lg btn-info" href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank" role="button">Book a Free Consultation</a></p>
         </div>
       </div>
 
@@ -24,7 +24,7 @@
           <div class="col-2">
             {% include social.html %}
           </div>
-          <div class="col-6">
+          <div class="col-6" id="content">
             {{ content }}
           </div>
           <div class="col-3">
