--- a/_includes/Web-Accessibility-Brochure.html
+++ b/_includes/Web-Accessibility-Brochure.html
@@ -43,7 +43,9 @@
          <div class="response" id="mce-success-response" style="display:none"></div>
        </div>
        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-       <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_25ed2db8c5f44be422ac9503a_40ed2cc532" tabindex="-1" value=""></div>
+       <div style="position: absolute; left: -5000px;" aria-hidden="true">
+         <label for="dog-bread" aria-hidden="true">spam</label>
+         <input type="text" id="dog-bread" name="b_25ed2db8c5f44be422ac9503a_40ed2cc532" tabindex="-1" value=""></div>
        <div class="clear">
          <div class="form-group row">
           <div class="col-3 offset-9">
