--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,4 +20,20 @@
     <!-- Custom styles for this template -->
     <link href="{{ site.url }}/assets/css/main.css" rel="stylesheet">
 
+    <!-- orbit anylitic -->
+    <script type="application/javascript">
+      (function(b, o, n, g, s, r, c) {
+        if (b[s]) return;
+        b[s] = {};
+        b[s].scriptToken = "Xy0yMDUwOTY2OTQy";
+        r = o.createElement(n);
+        c = o.getElementsByTagName(n)[0];
+        r.async = 1;
+        r.src = g;
+        r.id = s + n;
+        c.parentNode.insertBefore(r, c);
+      })(window, document, "script",
+      "//cdn.oribi.io/Xy0yMDUwOTY2OTQy/oribi.js", "ORIBI");
+    </script>
+
   </head>
