udate accessibitly Brochure

--- a/_includes/Web-Accessibility-Brochure.html
+++ b/_includes/Web-Accessibility-Brochure.html
@@ -2,7 +2,7 @@
 <div id="mc_embed_signup">
   <form action="https://kaffeinatedkodemonkey.us11.list-manage.com/subscribe/post?u=25ed2db8c5f44be422ac9503a&amp;id=40ed2cc532" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	     <h3 class="text-center">Download Free Web Accessibility Brochure</h3>
+	     <h3 class="text-center">Download Accessibility Brochure</h3>
        <div class="indicates-required text-right">
          <small><span class="asterisk text-danger text-danger">*</span> indicates required</small/>
         </div>
