--- a/_includes/index.html
+++ b/_includes/index.html
@@ -47,6 +47,7 @@
             <li class="text-left">How-To-Resolve</li>
             <li class="text-left">Monthly Monitoring</li>
             <li class="text-left">VPAT Certification</li>
+            <li class="text-left">Requires 1 year contract</li>
             <div aria-hidden="ture">
               <p>&nbsp;</p>
             </div>
@@ -65,8 +66,7 @@
           <h2 class="card-title">VPAT Certification</h2>
           <h3 class="card-title">$2495 one-time</h3>
           <ul>
-            <li class="text-left">Evaluation Audit</li>
-            <li class="text-left">Compliance Report</li>
+            <li class="text-left">Evaluation Audit</li>s
             <li class="text-left">How-To-Resolve</li>
             <li class="text-left">VPAT Certification</li>
             <div aria-hidden="ture">
