--- a/_includes/index.html
+++ b/_includes/index.html
@@ -47,6 +47,7 @@
             <li class="text-left">How-To-Resolve</li>
             <li class="text-left">Monthly Monitoring</li>
             <li class="text-left">VPAT Certification</li>
+            <li class="text-left">Requires 1 year contract</li>
             <div aria-hidden="ture">
               <p>&nbsp;</p>
             </div>
