add google analytics

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,4 +36,15 @@
       "//cdn.oribi.io/Xy0yMDUwOTY2OTQy/oribi.js", "ORIBI");
     </script>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-136958025-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-136958025-1');
+    </script>
+
+
   </head>
