--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,6 +34,11 @@
           <a class="nav-link" href="{{ site.url }}/Blog">News/Resources</a>
         </li>
       </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <p class="mt-3 mr-3 text-info"><strong>Get a free page Evaluation</strong></p>
+      <input class="form-control mr-sm-2" type="search" placeholder="Free Evaluation" aria-label="Search">
+      <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Evauation</button>
+    </form>
 
     </div>
   </nav>
