--- a/_layouts/page-template.html
+++ b/_layouts/page-template.html
@@ -8,9 +8,9 @@
           <h2 class="sr-only">{{ page.caption }}<h2>
           <figure>
             {% if page.title == "Accessibilty News & Resorces" %}
-              <img class="img-fluid" src="{{ site.url }}/assets/images/{{ page.image }}" alt="{{ page.title }}">
+              <img class="img-fluid" src="{{ site.url }}/assets/images/{{ page.image }}" alt="{{ page.alt }}">
               {% else %}
-                <img class="img-fluid" src="{{ site.url }}/assets/images/{{ page.image }}" style="width: 80%;" alt="{{ page.title }}">
+                <img class="img-fluid" src="{{ site.url }}/assets/images/{{ page.image }}" style="width: 80%;" alt="{{ page.alt }}">
               {% endif %}
           </figure>
         </div>
