--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,11 +8,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="{% if page.description %}{{ page.description }} {% else %}We offer Accessibility Testing, WCAG Certifications and VPAT Documentation{% endif %}">
     <meta name="author" content="">
     <link rel="icon" href="{{ site.url }}/assets/images/favicon.ico">
 
-    <title>{{site.title}} | {% if page.title %}{{ page.title }}{% else %}Accessibility Testing{% endif %}</title>
+    <title>{% if page.title %}{{ page.title }} {% else %}Accessibility Testing{% endif %} | Kaffeinated Kodemonkey</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
