--- a/_includes/index.html
+++ b/_includes/index.html
@@ -20,15 +20,16 @@
 <!-- Wrap the rest of the page in another container to center all the content. -->
 <div class="row mb-3 ml-2">
   <div class="col-md-8 offset-md-2" id="content">
-    <h1>Accessibility Evaluation and VPAT Certification</h1>
+    <h1>Accessibility Evaluation and Certification</h1>
 
-    <p class="lead">Our Web Accessibilitiy expert has been through the <a href="https://webaim.org/services/training/" target="_blank">WebAIM</a> course
-    and understands the requirments for ADA compliance with Section 508, WCAG and EU and how it pertains to website and applicating content.</p>
+    <p class="lead">Our Web Accessibilitiy expert has been through the <strong><a href="https://webaim.org/services/training/" target="_blank">WebAIM</a></strong> course
+    and understands the requirments for <strong>ADA compliance</strong> with <strong>WCAG</strong>, <strong>Section 508</strong>, and <strong>EU</strong> and how it pertains to website and applicating content.</p>
 
-    <p class="lead">At Kaffeinated Kodemonkey we use the <a href="https://www.itic.org/policy/accessibility/vpat" target="_blank">Voluntary Product Accessibility Template or VPAT</a>
-    document to offer a <strong>Certification</strong> that validates your site or application is in conformance with Section 508, WCAG, and/or EU requirments.</p>
+    <p class="lead">At Kaffeinated Kodemonkey we use the <strong><a href="https://www.itic.org/policy/accessibility/vpat" target="_blank">Voluntary Product Accessibility Template or VPAT</a></strong>
+    document for our <strong>WCAG Certifications</strong> to validate your site or application is in conformance with <strong>WCAG</strong>, <strong>Section 508</strong>, and/or <strong>EU</strong> guidlines and standerds.
+    We strive for a <strong>Level AA</strong> Compliance.</p>
 
-    <p class="lead">Get your <a href="{{ site.url }}/VPAT">Accessibility Evaluation </a> today and start <a href="{{ site.url }}/Monitoring">monitoring your accessibility</a>.</p>
+    <p class="lead">Get your <strong><a href="{{ site.url }}/VPAT">Accessibility Evaluation </a></strong> today and start <strong><a href="{{ site.url }}/Monitoring">monitoring your accessibility</a></strong>.</p>
   </div>
 </div>
 
@@ -37,7 +38,7 @@
   <div class="row">
     <div class="col-lg-4">
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="VPAT Monitoring">
+        <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="Accessible Monitoring">
         <div class="card-body">
           <h2 class="card-title">Accessibility Monitoring</h2>
           <h3 class="card-title"><span class="small text-danger">*</span> $2495/$365 mo</h3>
@@ -46,7 +47,7 @@
             <li class="text-left">Compliance Report</li>
             <li class="text-left">How-To-Resolve</li>
             <li class="text-left">Monthly Monitoring</li>
-            <li class="text-left">VPAT Certification</li>
+            <li class="text-left">WCAG Certification</li>
             <li class="text-left">Requires 1 year contract</li>
             <div aria-hidden="ture">
               <p>&nbsp;</p>
@@ -61,15 +62,15 @@
     </div><!-- /.col-lg-4 -->
     <div class="col-lg-4">
       <div class="card shadow-lg p-3 mb-5 bg-light rounded" style="width: 20rem;">
-        <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="VPAT Evaluation & Certification">
+        <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="WCAG Evaluation & Certification">
         <div class="card-body">
-          <h2 class="card-title">VPAT Certification</h2>
+          <h2 class="card-title">WCAG Certification</h2>
           <h3 class="card-title">$2495 one-time</h3>
           <ul>
             <li class="text-left">Evaluation Audit</li>
             <li class="text-left">Compliance Report</li>
             <li class="text-left">How-To-Resolve</li>
-            <li class="text-left">VPAT Certification</li>
+            <li class="text-left">WCAG Certification</li>
             <div aria-hidden="ture">
               <p>&nbsp;</p>
               <p>&nbsp;</p>
@@ -81,7 +82,7 @@
     </div><!-- /.col-lg-4 -->
     <div class="col-lg-4">
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="VPAT Evaluation">
+        <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="Accessible Evaluation">
         <div class="card-body">
           <h2 class="card-title">Accessibility Evaluation</h2>
           <h3 class="card-title">$695 one-time</h3>
@@ -115,7 +116,7 @@
 
       <p class="lead">Don't waste your time trying to understand how to fill out a VPAT document. We have a web accessibility expert that can do this for you.</p>
 
-      <p class="lead">We have been filling out VPAT's for all industries and know the difference between the four (4) types documents and what
+      <p class="lead">Our expert has been filling out VPAT's for all industries and understands the difference between the four (4) types documents and what
       the requirements are.</p>
 
       <div class="row">
@@ -147,7 +148,7 @@
 
   <div class="row featurette">
     <div class="col-md-7 order-md-2">
-      <h2 class="featurette-heading">Section 508 & WCAG <span class="text-muted">Explained</span></h2>
+      <h2 class="featurette-heading">WCAG & Section 508 <span class="text-muted">Explained</span></h2>
 
       <p class="lead">"Every website and online-document is required to be accessible", there is no internet police
       monitoring every site for compliance and issuing tickets however, there are pending mitigations.</p>
@@ -157,11 +158,11 @@
       instructions against you so why not follow them now.</p>
 
 
-      <p><a href="{{ site.url}}/508" class="btn btn-md btn-primary">Understanding 508 & WCAG</a></p>
+      <p><strong><a href="{{ site.url}}/508" class="btn btn-md btn-primary">Understanding WCAG & Section 508</a></strong></p>
 
     </div>
     <div class="col-md-5 order-md-1 mt-5 pt-5">
-      <img class="featurette-image img-fluid mx-auto" src="{{ site.url }}/assets/images/SECTION508-705x382.png" alt="Understading 508 & WCAG">
+      <img class="featurette-image img-fluid mx-auto" src="{{ site.url }}/assets/images/SECTION508-705x382.png" alt="Understading WCAG & Section 508">
     </div>
   </div>
 
@@ -169,7 +170,7 @@
 
   <div class="row featurette">
     <div class="col-md-7">
-      <h2 class="featurette-heading">Accessibility Monitoring <span class="text-muted">Stay in the know</span></h2>
+      <h2 class="featurette-heading">Accessibility Monitoring <span class="text-muted"> <br />Stay in the know</span></h2>
 
       <p class="lead">Don't Stop at an Evaluation or Certification, monitor your site and stay on top of compliance issue with a monthly Compliance
       Report.</p>
@@ -189,7 +190,7 @@
   <hr class="featurette-divider">
   <div class="row featurette">
     <div class="col-md-7  order-md-2">
-      <h2 class="featurette-heading">What are the Benefits? <span class="text-muted">See for yourself.</span></h2>
+      <h2 class="featurette-heading">What are the Benefits? <span class="text-muted"><br />See for yourself.</span></h2>
 
       <p class="lead">Web Accessibility is a great place to start to improve your marketing and SEO strategies.
       Globally people with disabilities have a $9 Billion dollar disposable income. Why would you not take part in this?</p>
