--- a/_includes/index.html
+++ b/_includes/index.html
@@ -41,20 +41,18 @@
         <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="Accessible Monitoring">
         <div class="card-body">
           <h2 class="card-title">Accessibility Monitoring</h2>
-          <h3 class="card-title"><span class="small text-danger">*</span> $2495/$365 mo</h3>
+          <h3 class="card-title"><span class="small text-danger">*</span> $1695/$250 mo</h3>
           <ul>
             <li class="text-left">Evaluation Audit</li>
-            <li class="text-left">Compliance Report</li>
-            <li class="text-left">How-To-Resolve</li>
-            <li class="text-left">Monthly Monitoring</li>
+            <li class="text-left">VPAT Document</li>
             <li class="text-left">WCAG Certification</li>
+            <li class="text-left">Monthly Monitoring</li>
+            <li class="text-left">How-To-Fix Document</li>
             <li class="text-left">Requires 1 year contract</li>
-            <div aria-hidden="ture">
-              <p>&nbsp;</p>
-            </div>
+            <li class="text-left">Certification Valid for 1 year</li>
           </ul>
 
-          <h4 class="small text-left text-danger">* Request Quote for Enterprise Monitoring</h4>
+          <h4 class="small text-left text-muted">* Request Quote for Enterprise Monitoring</h4>
 
           <a href="https://kaffeinatedkodemonkey.youcanbook.me/" data-ycbm-modal="true" class="btn btn-danger mt-3">Start Monitoring</a>
         </div>
@@ -65,12 +63,13 @@
         <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="WCAG Evaluation & Certification">
         <div class="card-body">
           <h2 class="card-title">WCAG Certification</h2>
-          <h3 class="card-title">$2495 one-time</h3>
+          <h3 class="card-title"><span class="small text-danger">*</span> $1695 one-time</h3>
           <ul>
             <li class="text-left">Evaluation Audit</li>
-            <li class="text-left">Compliance Report</li>
-            <li class="text-left">How-To-Resolve</li>
+            <li class="text-left">VPAT Document</li>
             <li class="text-left">WCAG Certification</li>
+            <li class="text-left">How-To-Fix Document</li>
+            <li class="text-left">Certification Valid for 1 year</li>
             <div aria-hidden="ture">
               <p>&nbsp;</p>
               <p>&nbsp;</p>
@@ -88,9 +87,10 @@
           <h3 class="card-title">$695 one-time</h3>
           <ul>
             <li class="text-left">Evaluation Audit</li>
-            <li class="text-left">Compliance Report</li>
-            <li class="text-left">How-To-Resolve</li>
+            <li class="text-left">How-To-Fix Document</li>
             <div aria-hidden="ture">
+              <p>&nbsp;</p>
+              <p>&nbsp;</p>
               <p>&nbsp;</p>
               <p>&nbsp;</p>
               <p>&nbsp;</p>
@@ -103,7 +103,7 @@
      </div><!-- /.col-lg-4 -->
 
 
-     <small>*Pricing may vary based on the size of the site</small>
+     <small class="text-danger">*Pricing may vary based on the size of the site</small>
   </div><!-- /.row -->
 
   <!-- START THE FEATURETTES -->
@@ -114,29 +114,28 @@
     <div class="col-md-7">
       <h2 class="featurette-heading">VPAT Document <span class="text-muted">Done right.</span></h2>
 
-      <p class="lead">Don't waste your time trying to understand how to fill out a VPAT document. We have a web accessibility expert that can do this for you.</p>
+      <p class="lead">Don't waste your time trying to understand how to fill out a <a href="{{ site.url}}/VPAT"><strong>VPAT document</strong></a>. We have a web accessibility expert that can do this for you.</p>
 
-      <p class="lead">Our expert has been filling out VPAT's for all industries and understands the difference between the four (4) types documents and what
+      <p class="lead">Our expert has been filling out VPAT's for all industries and understands the difference between the four (4) types of documents and what
       the requirements are.</p>
 
+      <p class="lead">Each VPAT comes with a full site evaluation and <a href="{{ site.url}}/VPAT"><strong>WCAG Certification</strong></a>. Our expert will help determine the correct VPAT for your Certification.</p>
+
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-6">
           <ul>
-            <li>VPAT 508</li>
-            <li>VPAT EU</li>
+            <li>WCAG 508 Certificaton</li>
+            <li>WCAG EU Certificaton</li>
           </ul>
         </div>
-        <div class="col-md-4">
-          <li>VPAT WVAG</li>
-          <li>Full VPAT</li>
+        <div class="col-md-6">
+          <li>WCAG Certificaton</li>
+          <li>Full WCAG Certificaton</li>
         </ul>
       </div>
     </div>
 
-      <p class="lead">Each VPAT is designed to meet a specific requirement. Unless you have a pre-requested VPAT, our experts will discuss your needs and help
-    determine the correct VPAT for your Certification.</p>
-
-    <p><a href="{{ site.url}}/VPAT" class="btn btn-md btn-primary">Get your VPAT Certification</a></p>
+    <p><a href="https://kaffeinatedkodemonkey.youcanbook.me/" data-ycbm-modal="true" class="btn btn-danger mt-3">Get your WCAG Certification Today!</a></p>
 
     </div>
     <div class="col-md-5">
@@ -148,7 +147,7 @@
 
   <div class="row featurette">
     <div class="col-md-7 order-md-2">
-      <h2 class="featurette-heading">WCAG & Section 508 <span class="text-muted">Explained</span></h2>
+      <h2 class="featurette-heading">Section 508 & WCAG Critera <span class="text-muted">Explained</span></h2>
 
       <p class="lead">"Every website and online-document is required to be accessible", there is no internet police
       monitoring every site for compliance and issuing tickets however, there are pending mitigations.</p>
@@ -158,7 +157,7 @@
       instructions against you so why not follow them now.</p>
 
 
-      <p><strong><a href="{{ site.url}}/508" class="btn btn-md btn-primary">Understanding WCAG & Section 508</a></strong></p>
+      <p><strong><a href="{{ site.url}}/508" class="btn btn-md btn-primary">Understanding &Section 508 WCAG Critera</a></strong></p>
 
     </div>
     <div class="col-md-5 order-md-1 mt-5 pt-5">
@@ -206,6 +205,8 @@
 
       <p class="lead">Bottom line is if you are doing Web Accessible for marketing or for Section 508 requirements you need to stay on top of it.
       We help you do that with VPAT Evaluations, Certifications, and Monitoring.</p>
+
+      <p><a href="https://kaffeinatedkodemonkey.youcanbook.me/" data-ycbm-modal="true" class="btn btn-danger mt-3">Get your WCAG Certification Today!</a></p>
     </div>
     <div class="col-md-5">
       <img class="featurette-image img-fluid mx-auto" src="{{ site.url }}/assets/images/AccessibilityBenefits.jpeg" alt="Why Accessibility is important">
