--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,7 +1,6 @@
 <div class="row">
   <div class="col">
-    <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-    <script type="IN/CompanyProfile" data-id="10336199" data-format="hover" data-related="false" data-text="Kaffeinated Kodemonkey"></script>
+    <a href="https://www.linkedin.com/in/{{site.linkedin}}" target="_blank"><img src="{{site.url}}/assets/images/linkedin.png"> Kaffeinated Kodemonkey</a>
   </div>
 </div>
 
