--- a/_includes/index.html
+++ b/_includes/index.html
@@ -41,20 +41,19 @@
         <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="Accessible Monitoring">
         <div class="card-body">
           <h2 class="card-title">Accessibility Monitoring</h2>
-          <h3 class="card-title"><span class="small text-danger">*</span> $1695/$250 mo</h3>
+          <h3 class="card-title"><span class="small text-danger">*</span> $1750/$250 mo</h3>
           <ul>
-            <li class="text-left">Evaluation Audit</li>
-            <li class="text-left">VPAT Document</li>
             <li class="text-left">WCAG Certification</li>
-            <li class="text-left">Monthly Monitoring</li>
-            <li class="text-left">How-To-Fix Document</li>
-            <li class="text-left">Requires 1 year contract</li>
-            <li class="text-left">Certification Valid for 1 year</li>
+            <li class="text-left">Accessible Reports</li>
+            <li class="text-left">Resolusion Support Team</li>
+            <li class="text-left">Track progress over time</li>
+            <li class="text-left">Full access to manage pages</li>
+            <li class="text-left">Unlimited Sites & Scanning</li>
           </ul>
-
+          <h4 class="small text-left text-muted">Requires 1 year contract</h4>
           <h4 class="small text-left text-muted">* Request Quote for Enterprise Monitoring</h4>
 
-          <a href="https://kaffeinatedkodemonkey.youcanbook.me/" data-ycbm-modal="true" class="btn btn-danger mt-3">Start Monitoring</a>
+          <a href="{{site.url}}/Monitoring" class="btn btn-danger btn-md mt-3">Start Monitoring</a>
         </div>
       </div>
     </div><!-- /.col-lg-4 -->
@@ -63,18 +62,19 @@
         <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="WCAG Evaluation & Certification">
         <div class="card-body">
           <h2 class="card-title">WCAG Certification</h2>
-          <h3 class="card-title"><span class="small text-danger">*</span> $1695 one-time</h3>
+          <h3 class="card-title"><span class="small text-danger">*</span> $1999 one-time</h3>
           <ul>
             <li class="text-left">Evaluation Audit</li>
             <li class="text-left">VPAT Document</li>
             <li class="text-left">WCAG Certification</li>
             <li class="text-left">How-To-Fix Document</li>
+            <li class="text-left">Accessibility Statement</li>
             <li class="text-left">Certification Valid for 1 year</li>
             <div aria-hidden="ture">
               <p>&nbsp;</p>
-              <p>&nbsp;</p>
             </div>
           </ul>
+
           <a href="https://kaffeinatedkodemonkey.youcanbook.me/" data-ycbm-modal="true" class="btn btn-lg btn-danger">Get Certified</a>
         </div>
       </div>
@@ -83,13 +83,12 @@
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="Accessible Evaluation">
         <div class="card-body">
-          <h2 class="card-title">Accessibility Evaluation</h2>
-          <h3 class="card-title">$695 one-time</h3>
+          <h2 class="card-title">VPAT Only</h2>
+          <h3 class="card-title"><span class="small text-danger">*</span> $999 one-time</h3>
           <ul>
             <li class="text-left">Evaluation Audit</li>
-            <li class="text-left">How-To-Fix Document</li>
-            <div aria-hidden="ture">
-              <p>&nbsp;</p>
+            <li class="text-left">VPAT Document</li>
+            <div aria-hidden="ture" class="pb-2">
               <p>&nbsp;</p>
               <p>&nbsp;</p>
               <p>&nbsp;</p>
@@ -103,7 +102,7 @@
      </div><!-- /.col-lg-4 -->
 
 
-     <small class="text-danger">*Pricing may vary based on the size of the site</small>
+     <p><span class="text-danger">*</span> Pricing vary based on the size of the site.</p>
   </div><!-- /.row -->
 
   <!-- START THE FEATURETTES -->
