--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
           <a class="nav-link" href="{{ site.url }}/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ site.url }}/VPAT">VPAT</a>
+          <a class="nav-link" href="{{ site.url }}/VPAT">VPAT - Certification</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ site.url }}/508">508 & WCAG</a>
