--- a/_includes/index.html
+++ b/_includes/index.html
@@ -20,16 +20,36 @@
 <!-- Wrap the rest of the page in another container to center all the content. -->
 <div class="row mb-3 ml-2">
   <div class="col-md-8 offset-md-2" id="content">
-    <h1>Accessibility Evaluation and Certification</h1>
+    <h2>Why Accessibilitiy Matters</h2>
+    <p class="lead">There are at least three main kinds of reasons that might motivate people to create accessible web content:</p>
+    <ul>
+      <li>To improve the lives of people with disabilities (human-centered motivations)</li>
+      <li>To capitalize on the a wider audience or consumer base (marketing or economic-centered motivations)</li>
+      <li>To avoid lawsuits and/or bad press (public relations and punishment-centered motivations)</li>
+    </ul>
 
-    <p class="lead">Our Web Accessibilitiy expert has been through the <strong><a href="https://webaim.org/services/training/" target="_blank">WebAIM</a></strong> course
-    and understands the requirments for <strong>ADA compliance</strong> with <strong>WCAG</strong>, <strong>Section 508</strong>, and <strong>EU</strong> and how it pertains to website and applicating content.</p>
+    <p class="lead">Accessible web sites will accomplish all of these goals. No matter which motivation works, one principle will always hold true: web accessibility is most easily achieved when people are at the center of the process.
+      That is why Kaffeinated Kodemonkey strives to use the POUR pricipals set forth by the WCAG:</p>
 
-    <p class="lead">At Kaffeinated Kodemonkey we use the <strong><a href="https://www.itic.org/policy/accessibility/vpat" target="_blank">Voluntary Product Accessibility Template or VPAT</a></strong>
-    document for our <strong>WCAG Certifications</strong> to validate your site or application is in conformance with <strong>WCAG</strong>, <strong>Section 508</strong>, and/or <strong>EU</strong> guidlines and standerds.
-    We strive for a <strong>Level AA</strong> Compliance.</p>
+      <ul>
+        <li><strong>Perceivable</strong> - Information and user interface components must be presentable to users in ways they can perceive. This means that users must be able to perceive the information being presented (it can't be invisible to all of their senses)</li>
+        <li><strong>Operable</strong> - User interface components and navigation must be operable. This means that users must be able to operate the interface (the interface cannot require interaction that a user cannot perform)</li>
+        <li><strong>Understandable</strong> - Information and the operation of user interface must be understandable. This means that users must be able to understand the information as well as the operation of the user interface (the content or operation cannot be beyond their understanding)</li>
+        <li><strong>Robust</strong> - Content must be robust enough that it can be interpreted reliably by a wide variety of user agents, including assistive technologies. This means that users must be able to access the content as technologies advance (as technologies and user agents evolve, the content should remain accessible)</li>
 
-    <p class="lead">Get your <strong><a href="{{ site.url }}/VPAT">Accessibility Evaluation </a></strong> today and start <strong><a href="{{ site.url }}/Monitoring">monitoring your accessibility</a></strong>.</p>
+      </ul>
+
+      <p class="lead">Even those who are simply trying to avoid lawsuits will sooner or later realize that the needs of the target audience—people with disabilities—must
+    be carefully considered and addressed.</p>
+
+
+    <h2>Accessibility Evaluation and Certification</h2>
+
+    <p class="lead">Our expert has been through the <strong><a href="https://webaim.org/services/training/" target="_blank">WebAIM</a></strong> course
+    and understands the requirments for ADA compliance and how it pertains to website design. We issue <strong>WCAG Certifications</strong> based on the <strong><a href="https://www.itic.org/policy/accessibility/vpat" target="_blank">Voluntary Product Accessibility Template</a></strong> - VPAT
+    document along with an Accessibility Statement for you to validate that your site or application is in conformance with <strong>WCAG</strong>, <strong>Section 508</strong>, and/or <strong>EU</strong> standerds.</p>
+
+      <p class="lead"> We strive for a <strong>Level AA</strong> Compliance. Get your <strong><a href="{{ site.url }}/VPAT">Accessibility Evaluation </a></strong> today and start <strong><a href="{{ site.url }}/Monitoring">monitoring your accessibility</a></strong>.</p>
   </div>
 </div>
 
