--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,9 +7,29 @@
 
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="{{ site.url }}/assets/js/vendor/popper.min.js"></script>
-    <script src="{{ site.url }}/assets/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
     <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+
+    <!-- UserWay Accessibilty Tool -->
+    <script type="text/javascript">
+      var _userway_config = {
+      /* uncomment the following line to override default position*/
+      /* position: '1', */
+      /* uncomment the following line to override default size (values: small, large)*/
+      /* size: 'large', */
+      /* uncomment the following line to override default language (e.g., fr, de, es, he, nl, etc.)*/
+      /* language: 'en-US', */
+      /* uncomment the following line to override color set via widget (e.g., #053f67)*/
+      /* color: '#053f67', */
+      /* uncomment the following line to override type set via widget(1=person, 2=chair, 3=eye)*/
+      /* type: '1', */
+      /* uncomment the following line to override support on mobile devices*/
+      /* mobile: true, */
+      account: 'y5ITB9sA7Q'
+      };
+    </script>
+    <script type="text/javascript" src="https://cdn.userway.org/widget.js"></script>
   </body>
 </html>
