--- a/_includes/index.html
+++ b/_includes/index.html
@@ -49,7 +49,7 @@
     and understands the requirments for ADA compliance and how it pertains to website design. We issue <strong>WCAG Certifications</strong> based on the <strong><a href="https://www.itic.org/policy/accessibility/vpat" target="_blank">Voluntary Product Accessibility Template</a></strong> - VPAT
     document along with an Accessibility Statement for you to validate that your site or application is in conformance with <strong>WCAG</strong>, <strong>Section 508</strong>, and/or <strong>EU</strong> standerds.</p>
 
-      <p class="lead"> We strive for a <strong>Level AA</strong> Compliance. Get your <strong><a href="{{ site.url }}/VPAT">Accessibility Evaluation </a></strong> today and start <strong><a href="{{ site.url }}/Monitoring">monitoring your accessibility</a></strong>.</p>
+      <p class="lead"> We strive for a <strong>Level AA</strong> Compliance. Get your <strong><a href="{{ site.url }}/WCAG-Certification">Accessibility Evaluation </a></strong> today and start <strong><a href="{{ site.url }}/Monitoring">monitoring your accessibility</a></strong>.</p>
   </div>
 </div>
 
@@ -133,12 +133,12 @@
     <div class="col-md-7">
       <h2 class="featurette-heading">VPAT Document <span class="text-muted">Done right.</span></h2>
 
-      <p class="lead">Don't waste your time trying to understand how to fill out a <a href="{{ site.url}}/VPAT"><strong>VPAT document</strong></a>. We have a web accessibility expert that can do this for you.</p>
+      <p class="lead">Don't waste your time trying to understand how to fill out a style="width:2<a href="{{ site.url}}/WCAG-Certification"><strong>VPAT document</strong></a>. We have a web accessibility expert that can do this for you.</p>
 
       <p class="lead">Our expert has been filling out VPAT's for all industries and understands the difference between the four (4) types of documents and what
       the requirements are.</p>
 
-      <p class="lead">Each VPAT comes with a full site evaluation and <a href="{{ site.url}}/VPAT"><strong>WCAG Certification</strong></a>. Our expert will help determine the correct VPAT for your Certification.</p>
+      <p class="lead">Each VPAT comes with a full site evaluation and style="width:2<a href="{{ site.url}}/WCAG-Certification"><strong>WCAG Certification</strong></a>. Our expert will help determine the correct VPAT for your Certification.</p>
 
       <div class="row">
         <div class="col-md-6">
@@ -176,7 +176,7 @@
       instructions against you so why not follow them now.</p>
 
 
-      <p><strong><a href="{{ site.url}}/508" class="btn btn-md btn-primary">Understanding &Section 508 WCAG Critera</a></strong></p>
+      <p><strong><a href="{{ site.url}}/WCAG-508-Compliant" class="btn btn-md btn-primary">Understanding &Section 508 WCAG Critera</a></strong></p>
 
     </div>
     <div class="col-md-5 order-md-1 mt-5 pt-5">
