--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,10 +22,10 @@
           <a class="nav-link" href="{{ site.url }}/">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ site.url }}/VPAT">WCAG - Certification</a>
+          <a class="nav-link" href="{{ site.url }}/WCAG-Certification">WCAG - Certification</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ site.url }}/508">WCAG & 508 Compliance</a>
+          <a class="nav-link" href="{{ site.url }}/WCAG-508-Compliance">WCAG & 508 Compliance</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ site.url }}/Monitoring">Monitoring</a>
