--- a/_includes/index.html
+++ b/_includes/index.html
@@ -133,12 +133,12 @@
     <div class="col-md-7">
       <h2 class="featurette-heading">VPAT Document <span class="text-muted">Done right.</span></h2>
 
-      <p class="lead">Don't waste your time trying to understand how to fill out a style="width:2<a href="{{ site.url}}/WCAG-Certification"><strong>VPAT document</strong></a>. We have a web accessibility expert that can do this for you.</p>
+      <p class="lead">Don't waste your time trying to understand how to fill out a <a href="{{ site.url}}/WCAG-Certification"><strong>VPAT document</strong></a>. We have a web accessibility expert that can do this for you.</p>
 
       <p class="lead">Our expert has been filling out VPAT's for all industries and understands the difference between the four (4) types of documents and what
       the requirements are.</p>
 
-      <p class="lead">Each VPAT comes with a full site evaluation and style="width:2<a href="{{ site.url}}/WCAG-Certification"><strong>WCAG Certification</strong></a>. Our expert will help determine the correct VPAT for your Certification.</p>
+      <p class="lead">Each VPAT comes with a full site evaluation and can be part of a <a href="{{ site.url}}/WCAG-Certification"><strong>WCAG Certification</strong></a> or completed on its own. Our expert will help determine the correct VPAT for your needs.</p>
 
       <div class="row">
         <div class="col-md-6">
