--- a/_includes/index.html
+++ b/_includes/index.html
@@ -86,7 +86,7 @@
           <ul>
             <li class="text-left">Evaluation Audit</li>
             <li class="text-left">VPAT Document</li>
-            <li class="text-left">WCAG Certification</li>
+            <li class="text-left">Certification Badge</li>
             <li class="text-left">How-To-Fix Document</li>
             <li class="text-left">Accessibility Statement</li>
             <li class="text-left">Certification Valid for 1 year</li>
