--- a/_includes/index.html
+++ b/_includes/index.html
@@ -67,7 +67,7 @@
             <li class="text-left">Accessible Reports</li>
             <li class="text-left">Resolusion Support Team</li>
             <li class="text-left">Track progress over time</li>
-            <li class="text-left">Full access to manage pages</li>
+            <li class="text-left">Access to manage pages</li>
             <li class="text-left">Unlimited Sites & Scanning</li>
           </ul>
           <h4 class="small text-left text-muted">Requires 1 year contract</h4>
