--- a/_includes/VPAT-Brochure.html
+++ b/_includes/VPAT-Brochure.html
@@ -1,24 +1,25 @@
 <!-- Begin MailChimp Signup Form -->
 <div id="mc_embed_signup">
-  <form action="https://kaffeinatedkodemonkey.us11.list-manage.com/subscribe/post?u=25ed2db8c5f44be422ac9503a&amp;id=4bd59d6de7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+  <form action="https://kaffeinatedkodemonkey.us11.list-manage.com/subscribe/post?u=25ed2db8c5f44be422ac9503a&amp;id=4bd59d6de7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank"
+    novalidate>
     <div id="mc_embed_signup_scroll">
-      <h3 class="text-center">Download Free VPAT Brochure</h3>
+      <h3 class="text-center">Download Our Accessibility E-Book</h3>
       <div class="indicates-required text-right">
         <small><span class="asterisk text-danger text-danger">*</span> indicates required</small>
       </div>
 
       <p>&nbsp;</p>
       <div class="form-group row">
-        <label for="mce-FNAME" class="col-sm-4 col-form-label text-right text-right"><span class="asterisk text-danger">*</span>First Name:  </label>
+        <label for="mce-FNAME" class="col-sm-4 col-form-label text-right text-right"><span class="asterisk text-danger">*</span>First Name: </label>
         <div class="col-sm-8">
-          <input type="text" value="" name="FNAME" class="form-control" id="mce-FNAME" required >
+          <input type="text" value="" name="FNAME" class="form-control" id="mce-FNAME" required>
         </div>
       </div>
       <div class="form-group row">
-	       <label for="mce-LNAME" class="col-sm-4 col-form-label text-right"><span class="asterisk text-danger">*</span>Last Name:</label>
-         <div class="col-sm-8">
-           <input type="text" value="" name="LNAME" class="form-control" id="mce-LNAME" required>
-         </div>
+        <label for="mce-LNAME" class="col-sm-4 col-form-label text-right"><span class="asterisk text-danger">*</span>Last Name:</label>
+        <div class="col-sm-8">
+          <input type="text" value="" name="LNAME" class="form-control" id="mce-LNAME" required>
+        </div>
       </div>
       <div class="form-group row">
         <label for="mce-URL" class="col-sm-4 col-form-label text-right"><span class="asterisk text-danger">*</span>Website: </label>
@@ -44,7 +45,7 @@
       </div>
       <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
       <div style="position: absolute; left: -5000px;" aria-hidden="true">
-        <label for="dog-bread"aria-hidden="true">spam</label>
+        <label for="dog-bread" aria-hidden="true">spam</label>
         <input type="text" id="dog-bread" name="b_25ed2db8c5f44be422ac9503a_4bd59d6de7" tabindex="-1" value=""></div>
       <div class="clear">
         <div class="form-group row">
@@ -56,5 +57,22 @@
     </div>
   </form>
 </div>
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='URL';ftypes[3]='url';fnames[0]='EMAIL';ftypes[0]='email';fnames[4]='PHONE';ftypes[4]='phone';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+<script type='text/javascript'>
+  (function($) {
+    window.fnames = new Array();
+    window.ftypes = new Array();
+    fnames[1] = 'FNAME';
+    ftypes[1] = 'text';
+    fnames[2] = 'LNAME';
+    ftypes[2] = 'text';
+    fnames[3] = 'URL';
+    ftypes[3] = 'url';
+    fnames[0] = 'EMAIL';
+    ftypes[0] = 'email';
+    fnames[4] = 'PHONE';
+    ftypes[4] = 'phone';
+  }(jQuery));
+  var $mcj = jQuery.noConflict(true);
+</script>
 <!--End mc_embed_signup-->
