--- a/_includes/VPAT-Brochure.html
+++ b/_includes/VPAT-Brochure.html
@@ -50,7 +50,7 @@
       <div class="clear">
         <div class="form-group row">
           <div class="col-3 offset-9">
-            <button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-danger">Sign in</button>
+            <button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-danger">Download</button>
           </div>
         </div>
       </div>
