--- a/_layouts/page-template.html
+++ b/_layouts/page-template.html
@@ -32,12 +32,10 @@
         {{ content }}
       </div>
       <div class="col-3">
-        {% if page.title != "VPAT Newsletter" %}
-        <p><img src="{{ site.url }}/assets/images/Accessibilty-Audit-Hero-Image.jpg" style="width:100%;" class="img-thumbnail img-fluid" alt="Web Accessibilty Brochure"></p>
 
-        {% else %}
+        <!-- <p><img src="{{ site.url }}/assets/images/Accessibilty-Audit-Hero-Image.jpg" style="width:100%;" class="img-thumbnail img-fluid" alt="Web Accessibilty Brochure"></p> -->
+
         {% include VPAT-Brochure.html %}
-        {% endif %}
       </div><!-- Column -->
     </div>
   </div>
