--- a/_layouts/page-template.html
+++ b/_layouts/page-template.html
@@ -32,8 +32,7 @@
         {{ content }}
       </div>
       <div class="col-3">
-
-        <!-- <p><img src="{{ site.url }}/assets/images/Accessibilty-Audit-Hero-Image.jpg" style="width:100%;" class="img-thumbnail img-fluid" alt="Web Accessibilty Brochure"></p> -->
+        <p><img src="{{ site.url }}/assets/images/Accessibilty-Audit-Hero-Image.jpg" style="width:100%;" class="img-thumbnail img-fluid" alt="Web Accessibilty Brochure"></p>
 
         {% include VPAT-Brochure.html %}
       </div><!-- Column -->
