--- a/_includes/index.html
+++ b/_includes/index.html
@@ -10,7 +10,7 @@
 
 <div class="row">
   <div class="col-8 offset-md-2 text-right">
-    <p><a class="btn btn-lg btn-info" href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank" role="button">Book a Free Consultation</a></p>
+    <p><a class="btn btn-lg btn-info" href="https://meetings.hubspot.com/kaffeinatedkodemonkey" target="_blank" role="button">Book a Free Consultation</a></p>
   </div>
 </div>
 
@@ -113,7 +113,7 @@
             <li class="text-left">Letter of Accessibility</li>
           </ul>
 
-          <p class="text-center"><a href="https://kaffeinatedkodemonkey.youcanbook.me/" data-ycbm-modal="true" class="btn btn-md btn-info mt-5">Get Evaluated</a></p
+          <p class="text-center"><a href="https://meetings.hubspot.com/kaffeinatedkodemonkey" data-ycbm-modal="true" class="btn btn-md btn-info mt-5">Get Evaluated</a></p
         </div>
       </div>
     </div><!-- /.col-lg-4 -->
