--- a/_includes/index.html
+++ b/_includes/index.html
@@ -54,7 +54,7 @@
     <div class="col">
       <h2 class="text-center pb-3">Evaluate - Certify - Monitor</h2>
 
-      <p class="text-center lead">Our team is dedicated to helping companies complete a VPAT Evaluation and become WA-Certified.</p>
+      <p class="text-center lead">Our team is dedicated to helping companies complete a VPAT Evaluation and become WA Certified.</p>
     </div>
   </div>
   <!-- Three columns of text below the carousel -->
@@ -80,13 +80,12 @@
       <div class="card shadow-lg p-3 mb-5 bg-light rounded" style="width: 20rem;">
         <img class="card-img-top" src="{{ site.url }}/assets/images/AccessibiltyImageBG.jpg" alt="WA-Certification">
         <div class="card-body">
-          <h3 class="card-subtitle text-center">WA-Certification</h3>
+          <h3 class="card-subtitle text-center">WA Certification</h3>
           <h4 class="card-title text-center"><span class="small text-danger">*</span> $2999 one-time</h4>
           <ul class="mb-5 pb-3">
             <li class="text-left">Evaluation Audit</li>
-            <li class="text-left">VPAT Document</li>
+            <li class="text-left">Validation Document</li>
             <li class="text-left">Validation Badge</li>
-            <li class="text-left">How-To-Fix Document</li>
             <li class="text-left">Accessibility Statement</li>
             <li class="text-left">Certification Valid for 1 year</li>
           </ul>
