--- a/_layouts/page-template.html
+++ b/_layouts/page-template.html
@@ -17,7 +17,7 @@
 
   <div class="row">
     <div class="col-8 offset-md-2 text-right">
-      <p><a class="btn btn-lg btn-info" href="https://meetings.hubspot.com/kaffeinatedkodemonkey" target="_blank" role="button">Book a Free Consultation</a></p>
+      <p><a class="btn btn-lg btn-info" href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank" role="button">Book a Free Consultation</a></p>
     </div>
   </div>
 </header>
@@ -39,7 +39,7 @@
 
         <p>Is your site ADA compliant? Do you need a VPAT completed? </p>
         <p>Talk to an <strong>Accessibility Specialist <span class="text-uppercase text-danger">TODAY</span></strong>.</p>
-        <p><a class="btn btn-md btn-info" href="https://meetings.hubspot.com/kaffeinatedkodemonkey" target="_blank" role="button">Book Free Consultation!</a></p>
+        <p><a class="btn btn-md btn-info" href="https://kaffeinatedkodemonkey.youcanbook.me/" target="_blank" role="button">Book Free Consultation!</a></p>
 
       </div>
       <div class="col-3">
